# py-z85

./: .gitignore  Makefile  README.md  py_z85.c  pyproject.toml  spec_32.c  spec_32.h
.github/workflows/: tests.yml
dev/: isolated-dist-test.sh  requirements.txt
py_z85/: __init__.pyi
tests/: test_py_z85.py
