[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-z85"
description = "Python Wrapper for Reference Implementation of Z85"
version = "0.9.0"
authors = [
    { name="Pieter Hintjens, iMatix Corporation and Contributors" },
    { name="Hauke D", email="haukex@zero-g.net" }
]
maintainers = [
    { name="Hauke D", email="haukex@zero-g.net" }
]
# https://spdx.org/licenses/
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
# https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries",
]

# the error "Additional properties are not allowed" from "Even Better TOML" can be ignored here:
[tool.setuptools]
packages = ["py_z85"]
ext-modules = [
    { name = "py_z85", sources = ["py_z85.c"] },
]

[project.urls]
"Homepage" = "https://github.com/haukex/py-z85"
"Bug Tracker" = "https://github.com/haukex/py-z85/issues"
